# Digital_recognition

./: CMakeLists.txt  Makefile  README.md
demo/: demo.cpp
include/: matrix.hpp  network.hpp
srcs/: matrix.cpp  network.cpp
